[gd_scene load_steps=17 format=3 uid="uid://cnw7neuqlhsd7"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_l4glu"]
[ext_resource type="PackedScene" uid="uid://cdy6gy43kn4aq" path="res://data/characters/desperado1/desperado1.tscn" id="2_nkpit"]
[ext_resource type="Texture2D" uid="uid://dbenhq70f1m10" path="res://assets/BGVar3.png" id="3_h0ocv"]
[ext_resource type="Resource" uid="uid://cwev4kyhnygw1" path="res://data/bullets/fullmetal_bullet.tres" id="5_p0jlu"]
[ext_resource type="PackedScene" uid="uid://bxnoduisayuhd" path="res://data/characters/player/player.tscn" id="14_fybkx"]
[ext_resource type="PackedScene" uid="uid://bgmpd6vng351f" path="res://scenes/GunCylinder.tscn" id="14_q02dn"]
[ext_resource type="PackedScene" uid="uid://bts07eooqx45e" path="res://scenes/RewardScreen.tscn" id="15_vw2ac"]
[ext_resource type="Resource" uid="uid://drmu45xygkgvl" path="res://data/characters/player_attributes.tres" id="16_6d4k0"]
[ext_resource type="PackedScene" uid="uid://dqjml7aieqyst" path="res://scenes/Deck.tscn" id="16_ou7be"]
[ext_resource type="PackedScene" uid="uid://yine14m7efuu" path="res://scenes/Discard.tscn" id="17_8wsft"]
[ext_resource type="PackedScene" uid="uid://dvj2w33sog2yo" path="res://scenes/Hand.tscn" id="18_5xkuh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="18_ex0tc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="19_sfsmu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="20_kdjk2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="21_p1pmc"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="22_g3e81"]

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_l4glu")
enemyScene = ExtResource("2_nkpit")

[node name="Background" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(2, 2)
texture = ExtResource("3_h0ocv")

[node name="DrawButton" type="Button" parent="."]
offset_left = 1101.0
offset_top = 700.0
offset_right = 1259.0
offset_bottom = 772.0
focus_mode = 0
text = "D R A W"

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 1101.0
offset_top = 700.0
offset_right = 1259.0
offset_bottom = 772.0
focus_mode = 0
text = "E N D  T U R N"

[node name="Deck" parent="." instance=ExtResource("16_ou7be")]
position = Vector2(1812, 910)
bullets = Array[Resource("res://data/bullets.gd")]([ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu"), ExtResource("5_p0jlu")])

[node name="Discard" parent="." instance=ExtResource("17_8wsft")]
position = Vector2(157, 954)
scale = Vector2(1.5, 1.5)

[node name="Hand" parent="." instance=ExtResource("18_5xkuh")]
position = Vector2(960, 910)

[node name="StateChartDebugger" parent="." instance=ExtResource("22_g3e81")]
visible = false
offset_left = 1412.0
offset_top = 20.0
offset_right = 1902.0
offset_bottom = 260.0
initial_node_to_watch = NodePath("../StateChart")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("18_ex0tc")

[node name="TurnPhase" type="Node" parent="StateChart"]
script = ExtResource("19_sfsmu")
initial_state = NodePath("PlayerUpkeep")

[node name="PlayerUpkeep" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="ToPlayerDraw" type="Node" parent="StateChart/TurnPhase/PlayerUpkeep"]
script = ExtResource("21_p1pmc")
to = NodePath("../../PlayerDraw")
event = &"upkeep_finished"
delay_in_seconds = "0.0"

[node name="PlayerDraw" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="ToPlayerReload" type="Node" parent="StateChart/TurnPhase/PlayerDraw"]
script = ExtResource("21_p1pmc")
to = NodePath("../../PlayerReload")
event = &"draw_finished"
delay_in_seconds = "0.0"

[node name="PlayerReload" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="ToPlayerShoot" type="Node" parent="StateChart/TurnPhase/PlayerReload"]
script = ExtResource("21_p1pmc")
to = NodePath("../../PlayerShoot")
event = &"reload_finished"
delay_in_seconds = "0.0"

[node name="PlayerShoot" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="ToPlayerEndTurn" type="Node" parent="StateChart/TurnPhase/PlayerShoot"]
script = ExtResource("21_p1pmc")
to = NodePath("../../PlayerEndTurn")
event = &"shoot_finished"
delay_in_seconds = "0.0"

[node name="PlayerEndTurn" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="ToEnemyUpkeep" type="Node" parent="StateChart/TurnPhase/PlayerEndTurn"]
script = ExtResource("21_p1pmc")
to = NodePath("../../EnemyUpkeep")
event = &"playerEndturn_finished"
delay_in_seconds = "0.0"

[node name="EnemyUpkeep" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="toEnemyExecIntention" type="Node" parent="StateChart/TurnPhase/EnemyUpkeep"]
script = ExtResource("21_p1pmc")
to = NodePath("../../EnemyExecIntention")
event = &"enemyUpkeep_finished"
delay_in_seconds = "0.0"

[node name="EnemyExecIntention" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="toEnemyEndTurn" type="Node" parent="StateChart/TurnPhase/EnemyExecIntention"]
script = ExtResource("21_p1pmc")
to = NodePath("../../EnemyEndTurn")
event = &"enemyExecIntention_finished"
delay_in_seconds = "0.0"

[node name="EnemyEndTurn" type="Node" parent="StateChart/TurnPhase"]
script = ExtResource("20_kdjk2")

[node name="toPlayerUpkeep" type="Node" parent="StateChart/TurnPhase/EnemyEndTurn"]
script = ExtResource("21_p1pmc")
to = NodePath("../../PlayerUpkeep")
event = &"enemyEndTurn_finished"
delay_in_seconds = "0.0"

[node name="GunCylinder" parent="." instance=ExtResource("14_q02dn")]
position = Vector2(960, 666)

[node name="Player" parent="." instance=ExtResource("14_fybkx")]
position = Vector2(960, 1034)
scale = Vector2(2.125, 2.125)
character = ExtResource("16_6d4k0")

[node name="OpacityLayer" type="ColorRect" parent="."]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 0.92549)

[node name="RewardScreen" parent="." instance=ExtResource("15_vw2ac")]
process_mode = 2
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(1.2, 1.2)

[connection signal="pressed" from="DrawButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="finished_move_discard_to_deck" from="Deck" to="." method="_on_deck_finished_move_discard_to_deck"]
[connection signal="drawCards" from="Discard" to="." method="_on_discard_draw_cards"]
[connection signal="timeout" from="Discard" to="." method="_on_discard_timeout"]
[connection signal="button1_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_1_pressed"]
[connection signal="button2_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_2_pressed"]
[connection signal="button3_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_3_pressed"]
[connection signal="button4_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_4_pressed"]
[connection signal="button5_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_5_pressed"]
[connection signal="button6_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_6_pressed"]
[connection signal="button7_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_7_pressed"]
[connection signal="button8_pressed" from="Hand" to="GunCylinder" method="_on_hand_button_8_pressed"]
[connection signal="timeout" from="Hand" to="." method="_on_hand_timeout"]
[connection signal="state_entered" from="StateChart/TurnPhase/PlayerUpkeep" to="." method="_on_player_upkeep_state_entered"]
[connection signal="state_entered" from="StateChart/TurnPhase/PlayerDraw" to="." method="_on_player_draw_state_entered"]
[connection signal="state_entered" from="StateChart/TurnPhase/PlayerReload" to="." method="_on_player_reload_state_entered"]
[connection signal="state_entered" from="StateChart/TurnPhase/EnemyUpkeep" to="." method="_on_enemy_upkeep_state_entered"]
[connection signal="state_entered" from="StateChart/TurnPhase/EnemyExecIntention" to="." method="_on_enemy_exec_intention_state_entered"]
[connection signal="state_entered" from="StateChart/TurnPhase/EnemyEndTurn" to="." method="_on_enemy_end_turn_state_entered"]
[connection signal="all_bullets_shot" from="GunCylinder" to="." method="_on_gun_cylinder_all_bullets_shot"]
[connection signal="cylinderLoadedRevolveAnimFinished" from="GunCylinder" to="." method="_on_gun_cylinder_cylinder_loaded_revolve_anim_finished"]
[connection signal="continuePressed" from="RewardScreen" to="." method="_on_reward_screen_continue_pressed"]
